2006-10-04  Kevin McCullough  <KMcCullough@apple.com>

        Reviewed by DethBakin.

        - Apparently the build bot uses an older version of XCode which warns about conversions and the newest version does not.  I hope this fixes the build but I cann't be sure on my system.

        * kjs/DateMath.cpp:
        (KJS::msToYear):
        (KJS::dayInYear):
        (KJS::dateToDayInYear):

2006-10-05  Darin Adler  <darin@apple.com>

        Reviewed by Adam.

        * wtf/Assertions.cpp: Changed assertion formatting to omit the "======"
        lines so you can see more assertions in less space. Also improved format
        of file/line information so it works with more development environments.

2006-10-04  Kevin McCullough  <KMcCullough@apple.com>

        Reviewed by Tim H.

        - The build machine is more sensitive about automatic conversions.  These fixes exp
licitly cast or change the input and return types of functions to avoid conversions.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * kjs/DateMath.cpp:
        (KJS::):
        (KJS::msToDays):
        (KJS::msToYear):
        (KJS::dayInYear):
        (KJS::monthToDayInYear):
        (KJS::dateToDayInYear):
        (KJS::getDSTOffsetSimple):
        (KJS::getDSTOffset):
        (KJS::dateToMseconds):
        (KJS::msToTM):

2006-10-04  Kevin McCullough  <KMcCullough@apple.com>

        Reviewed by GGaren

        - This is a big makeover for our Date implemenetation.  This solves many platform specific issues, specifically dates before 1970, and simplifies some ugly code.  The purpose of this was to get us to pass many of the JavaScriptCore tests on windows.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * kjs/DateMath.cpp: Added.
        (KJS::):
        (KJS::daysInYear):
        (KJS::daysFrom1970ToYear):
        (KJS::msFrom1970ToYear):
        (KJS::msToDays):
        (KJS::msToYear):