@@ -1,3 +1,11 @@
+2006-10-04  Nikolas Zimmermann  <zimmermann@kde.org>
+
+        Reviewed by Mitz.
+
+        Fix Qt/Linux build by adding DateMath.cpp to compilation.
+
+        * CMakeLists.txt: Also replace tabs with spaces.
+
 2006-10-04  Kevin McCullough  <KMcCullough@apple.com>
 
         Reviewed by DethBakin.
